[tool.poetry]
name = "khan-mart"
version = "0.1.0"
description = ""
authors = ["Muhammad_Hammad_Shah <Hammad4455shah5544@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pytest = "^8.2.2"
fastapi = "^0.111.0"
sqlmodel = "^0.0.16"
jwt = "^1.3.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.3.4"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
uvicorn = {version = "^0.27.1", extras = ["standard"]}
psycopg = {version = "^3.1.18", extras = ["binary"]}
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
tenacity = "^8.2.3"
emails = "^0.6"
gunicorn = "^21.2.0"
jinja2 = "^3.1.3"
alembic = "^1.13.1"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
